# InvertedPendulum

./: .gitignore  README.md
core/include/: task_control_motor_left.h  task_control_motor_rigth.h  task_data_acquisition.h  task_main.h  task_system_monitor.h  task_telemetry.h
core/source/: task_control_motor_left.c  task_control_motor_rigth.c  task_data_acquisition.c  task_main.c  task_system_monitor.c  task_telemetry.c
hal/include/: Device_TMS570LS04.h  Device_header.h  dcc.h  sci.h  spi.h
hal/source/: can.c  eqep.c  notification.c  os_portasm.asm  sci.c  spi.c  sys_main.c
include/: adc.h  can.h  mibspi.h  sci.h  sys_vim.h  system.h
source/: adc.c  crc.c  dcc.c  gio.c  mibspi.c  notification.c  sys_main.c  sys_vim.c  system.c
tests/: CMakeLists.txt
tests/example/: my_sum.h
tests/source/: test_my_sum.cpp
